--- a/package.json
+++ b/package.json
@@ -27,14 +27,18 @@
     "@oclif/dev-cli": "^1",
     "@oclif/test": "^1",
     "@types/chai": "^4",
+    "@types/fs-extra": "^9.0.1",
     "@types/mocha": "^5",
+    "@types/nock": "^11.1.0",
     "chai": "^4",
     "eslint": "^5.13",
     "eslint-config-oclif": "^3.1",
     "eslint-config-oclif-typescript": "^0.1",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-import": "^2.20.2",
+    "fs-extra": "^9.0.0",
     "mocha": "^5",
+    "nock": "^12.0.3",
     "nyc": "^14",
     "ts-node": "^8",
     "typescript": "^3.3"
