--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@oclif/plugin-help": "^3",
     "@types/chalk": "^2.2.0",
     "@types/inquirer": "^6.5.0",
-    "@types/node": "^14.0.1",
+    "@types/node": "^14.0.4",
     "@types/node-fetch": "^2.5.7",
     "@types/util.promisify": "^1.0.4",
     "@types/yaml": "^1.9.7",
     "chalk": "^4.0.0",
+    "cli-ux": "^5.4.6",
     "inquirer": "^7.1.0",
     "node-fetch": "^2.6.0",
     "tslib": "^1",
@@ -38,6 +39,7 @@
     "eslint-plugin-import": "^2.20.2",
     "fs-extra": "^9.0.0",
     "mocha": "^5",
+    "mock-inquirer": "^1.0.3",
     "nock": "^12.0.3",
     "nyc": "^14",
     "ts-node": "^8",
