--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -1,23 +1,37 @@
-name: "Style and documentation"
-env:
-  id: documentation
+name: "Build & Publish CLI"
 
-on: push
+on:
+  push:
 
 jobs:
-  generic:
+  build:
     runs-on: ubuntu-latest
-    outputs:
-      pull_request: ${{ steps.cpr.outputs.pull-request-number }}
     steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
+      - name: Checkout code
+        uses: actions/checkout@master
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: Setup NodeJS environment
+        uses: actions/setup-node@v1
         with:
           node-version: "12"
-      - run: yarn
-      - run: yarn test
-      - run: ./node_modules/.bin/nyc report --extension ts --reporter text-lcov > coverage.lcov
-      - uses: codecov/codecov-action@v1
-      #- run: yarn publish
-      #  env:
-      #    NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          registry-url: https://registry.npmjs.org/
+
+      - name: Install dependencies
+        run: yarn install
+
+      - name: Run tests
+        run: yarn test
+
+      - name: Generate code coverage stats
+        run: ./node_modules/.bin/nyc report --extension ts --reporter text-lcov > coverage.lcov
+
+      - name: Publish code coverage stats
+        uses: codecov/codecov-action@v1
+
+      - name: Publish package
+        if: startsWith(github.ref, 'refs/tags/')
+        run: npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
