Support branches and tags for neat-repos

--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
   ],
   "homepage": "https://github.com/olivr-com/neat",
   "keywords": [
-    "oclif"
+    "repository",
+    "template",
+    "cli"
   ],
   "license": "Apache-2.0",
   "main": "lib/index.js",
