--- a/examples/ask/.neat.yml
+++ b/examples/ask/.neat.yml
@@ -12,7 +12,7 @@ ask:
       - "PR template": false
       - "Issue templates": true
   - id: support_url
-post_run:
+post-run:
   - echo $NEAT_ASK_PROJECT_NAME
   - echo $NEAT_ASK_CI
   - echo $NEAT_ASK_OPTIONS
