--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mock-inquirer": "^1.0.3",
     "nock": "^12.0.3",
     "nyc": "^14",
+    "sinon": "^9.0.2",
     "ts-node": "^8",
     "typescript": "^3.3"
   },
@@ -54,9 +55,9 @@
   ],
   "homepage": "https://github.com/olivr-com/neat",
   "keywords": [
+    "cli",
     "repository",
-    "template",
-    "cli"
+    "template"
   ],
   "license": "Apache-2.0",
   "main": "lib/index.js",
