--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@oclif/plugin-help": "^3",
     "@types/chalk": "^2.2.0",
     "@types/inquirer": "^6.5.0",
+    "@types/lodash.escaperegexp": "^4.1.6",
     "@types/node": "^14.0.4",
     "@types/node-fetch": "^2.5.7",
     "@types/util.promisify": "^1.0.4",
@@ -20,6 +21,7 @@
     "chalk": "^4.0.0",
     "cli-ux": "^5.4.6",
     "inquirer": "^7.1.0",
+    "lodash.escaperegexp": "^4.1.2",
     "node-fetch": "^2.6.0",
     "tslib": "^1",
     "yaml": "^1.9.2"
