--- a/examples/inject/.neat.yml
+++ b/examples/inject/.neat.yml
@@ -9,3 +9,10 @@ inject:
   - id: test
     url: https://test.com/content.html
     target: [test/test.html]
+
+  # Invalid
+  - id: does not have a source
+    target: [test/test.html]
+  - id: source is empty
+    command:
+    target: [test/test.html]
