--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -1,10 +1,11 @@
-name: "Build & Publish CLI"
+name: Build & Publish CLI
 
 on:
   push:
 
 jobs:
-  build:
+  build-publish:
+    name: Build & Publish CLI
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -18,6 +19,18 @@ jobs:
           node-version: "12"
           registry-url: https://registry.npmjs.org/
 
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
       - name: Install dependencies
         run: yarn install
 
@@ -30,7 +43,7 @@ jobs:
       - name: Publish code coverage stats
         uses: codecov/codecov-action@v1
 
-      - name: Publish package
+      - name: Publish NPM package
         if: startsWith(github.ref, 'refs/tags/')
         run: npm publish --access public
         env:
