--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,10 +1,10 @@
-name: "Documentation"
+name: Documentation
 
 on: push
 
 jobs:
-  documentation:
-    name: Update documentation
+  readme:
+    name: Update readme
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@master
@@ -13,5 +13,6 @@ jobs:
         uses: technote-space/toc-generator@v2
         with:
           TARGET_PATHS: README.md
-          TOC_TITLE: ""
           MAX_HEADER_LEVEL: 3
+          COMMIT_MESSAGE: Update table of contents
+          PR_TITLE: Update table of contents (${PR_MERGE_REF})
