Change wrap functionality to support specifying patterns

--- a/examples/full/.neat.yml
+++ b/examples/full/.neat.yml
@@ -36,7 +36,8 @@ inject:
   - id: hello
     command: echo "hello world"
     target: [hello.txt, hello.md]
-    wrap: before
+    wrap:
+      before: <!-- begin-hello -->
   - id: google
     if: no-file
     url: https://google.com
