--- a/.github/workflows/cli.yml
+++ b/.github/workflows/cli.yml
@@ -4,9 +4,12 @@ on:
   push:
 
 jobs:
-  build-publish:
-    name: Build & Publish CLI
-    runs-on: ubuntu-latest
+  build:
+    name: Build
+    strategy:
+      matrix:
+        os: [ubuntu-latest, windows-latest, macos-latest]
+    runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout code
         uses: actions/checkout@master
@@ -16,8 +19,7 @@ jobs:
       - name: Setup NodeJS environment
         uses: actions/setup-node@v1
         with:
-          node-version: "12"
-          registry-url: https://registry.npmjs.org/
+          node-version: 12
 
       - name: Get yarn cache directory path
         id: yarn-cache-dir-path
@@ -32,19 +34,64 @@ jobs:
             ${{ runner.os }}-yarn-
 
       - name: Install dependencies
-        run: yarn install
+        run: yarn install --frozen-lockfile
 
       - name: Run tests
         run: yarn test
+      
+      - name: Upload test output
+        uses: actions/upload-artifact@v2
+        with:
+          name: nyc-output
+          path: .nyc_output
+
+  publish:
+    name: Publish
+    needs: [build]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@master
+        with:
+          ref: ${{ github.head_ref }}
+
+      - name: Setup NodeJS environment
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+          registry-url: https://registry.npmjs.org
+
+      - name: Get yarn cache directory path
+        id: yarn-cache-dir-path
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+
+      - uses: actions/cache@v2
+        id: yarn-cache
+        with:
+          path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-yarn-
+
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
+
+      - name: Download test output
+        uses: actions/download-artifact@v2
+        with:
+          name: nyc-output
+          path: .nyc_output
 
       - name: Generate code coverage stats
+        continue-on-error: true
         run: ./node_modules/.bin/nyc report --extension ts --reporter text-lcov > coverage.lcov
 
       - name: Publish code coverage stats
+        continue-on-error: true
         uses: codecov/codecov-action@v1
 
       - name: Publish NPM package
         if: startsWith(github.ref, 'refs/tags/')
-        run: npm publish --access public
+        run: yarn publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
