Fix tests for windows

--- a/examples/ask/.neat.yml
+++ b/examples/ask/.neat.yml
@@ -26,4 +26,5 @@ ask:
 post-run:
   - script: console.log(process.env.NEAT_ASK_PROJECT_NAME)
   - script: console.log(process.env.NEAT_ASK_CI)
-  - echo $NEAT_ASK_OPTIONS
+  - echo $NEAT_ASK_OPTIONS # Unix
+  - echo %NEAT_ASK_OPTIONS% # Windows
